kubernets/mysql+keycload/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: iam-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iam-db 
  template:
    metadata: 
      labels:
        app: iam-db
    spec:
      containers:
      - image: mysql:8
        name: iam-db
        ports:
        - containerPort: 3316
        volumeMounts:
          - name: iam-data-mysql
            mountPath: /var/lib/mysql
      volumes:
        - name: iam-data-mysql
          persistentVolumeClaim:
            claimName: iam-mysql-pvc
