kubernets/mysql+keycload/deply-keycload2.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - nodePort: 31619
    name: http
    port: 9091
    targetPort: 9091
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.1.1
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 9091
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 9091
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data
          name: keycloakdata
      volumes:
      - name: keycloakdata
        persistentVolumeClaim:
          claimName: keycloak-pv-claim
