kubernets/mysql+keycload/my-dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-db
spec:
  ports:
  - port: 3316
    protocol: TCP
    targetPort: 3316
  selector:
    app: iam-db
  type: ClusterIP
