kubernets/mysql+keycload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
      - "keycloak.192.168.49.2.nip.io"
  rules:
  - host: "keycloak.192.168.49.2.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 9091
